# Embedded_Software_Elements

./: CMakeLists.txt  main.c
ring_buffer/: ring_buffer.c  ring_buffer.h
simply_linked_list/: linked_list.c  linked_list.h  simply_linked_list_unit_test.c  simply_linked_list_unit_test.h
